# overleaf-mcp

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo.md
docs/superpowers/specs/: 2026-04-22-overleaf-mcp-design.md
src/overleaf_mcp/: __main__.py  capability.py  config.py  server.py  types.py
src/overleaf_mcp/checks/: findings.py
src/overleaf_mcp/parse/: __init__.py  tokens.py
src/overleaf_mcp/security/: askpass.py  paths.py  redact.py
src/overleaf_mcp/tools/: check_consistency.py  check_figures.py  check_math.py  check_packages.py  check_refs.py  check_tables.py  compile.py  explain_log.py  files.py  format.py  git_sync.py  lint.py  olsync.py  structure.py  zip_bridge.py
tests/: conftest.py  test_capability.py  test_config.py  test_server_smoke.py  test_types.py
tests/fixtures/: messy.tex  warnings.tex
tests/fixtures/checks/: math_bad.tex
tests/golden/: test_corpus.py
tests/golden/article/: main.tex  refs.bib
tests/golden/baselines/: article.json  beamer.json  multi-file.json
tests/golden/beamer/: slides.tex
tests/golden/multi-file/: main.tex  part1.tex  refs.bib
tests/golden/thesis/: main.tex  refs.bib
tests/parse/: test_tokens.py
tests/security/: test_paths.py  test_redact.py
tests/tools/: test_check_consistency.py  test_check_figures.py  test_check_math.py  test_check_packages.py  test_check_refs.py  test_check_tables.py  test_compile.py  test_explain_log.py  test_files.py  test_format.py  test_git_sync.py  test_lint.py  test_olsync.py  test_structure.py  test_zip_bridge.py
(+3 files in other folders)
