[project]
name = "overleaf-mcp"
version = "1.0.0"
description = "MCP server for Overleaf/LaTeX project formatting and linting"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "overleaf-mcp contributors" }]
dependencies = [
    "mcp>=1.0.0",
    "overleaf-sync>=1.2.0",
    "pydantic>=2.6",
    "python-socketio[asyncio-client]>=5.11",
    "websockets>=16.0",
]

[project.scripts]
overleaf-mcp = "overleaf_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/overleaf_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
